assets/styles/scss/_button.scss
@import '@/assets/styles/scss/mixins';

.btn {
  background: var(--text-color);
  color: #fffdfc;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.5rem;
  padding: 1.125rem;
  display: inline-block;
  cursor: pointer;
  text-align: center;
  transition: all ease-out 0.15s;

  @include tablet {
    font-size: 16px;
    line-height: 24px;
    padding: 18px;
  }

  &:hover {
    opacity: 0.8;
  }

  &_light {
    background: #fffdfc;
    color: var(--text-color);
    border-top: 0.0625rem solid var(--text-color);
    border-bottom: 0.0625rem solid var(--text-color);
  }

  &_white {
    background-color: white;
    border: none;
    color: var(--text-color);
  }
}

button:disabled{
  opacity: 0.8;
}

